# rusty-brain

./: .gitignore  Cargo.toml  LICENSE.md  README.md
datasets/: housing.data  iris.data
examples/: boston_housing.rs  iris.rs
models/: classification.json  regression.json
src/: lib.rs  main.rs  try.rs  utils.rs
src/datasets/: iris.data
src/file_reader/: mod.rs
src/neural_networks/: activation_functions.rs  loss_functions.rs  mod.rs  network.rs
src/neural_networks/layer/: activation.rs  dense.rs  mod.rs
src/neural_networks/optimizers/: adadelta.rs  adagrad.rs  adam.rs  mod.rs  momentum.rs  nesterov_momentum.rs  rms_prop.rs  sgd.rs
src/supervised/: regression.rs
