[package]
name = "rusty-brain"
version = "0.1.0"
authors = ["Pe6oProgramista <p.milev3@gmail.com>"]

[dependencies]
regex = "1.0.6"
ndarray = {version = "0.12.1", features = ["serde-1"]}
rand = "0.6.5"
plotlib = "0.4.0"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
typetag = "0.1.1"